Style/Docs: Fix overflowing header. Add screenshots of validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body{
 }
 
 h1{
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: bold;
     text-align: center;
     color: var(--text-color);
@@ -257,7 +257,7 @@ footer p a{
 @media screen and (min-width: 375px) {
     /*header*/
     h1{
-        font-size: 4em;
+        font-size: 2em;
     }
     
     h2, p{
@@ -316,6 +316,10 @@ footer p a{
 
 /*Media Query: Laptops (992px and up)*/
 @media screen and (min-width: 992px) {
+
+    h1{
+        font-size: 4em;
+    }
 
     #game{
         padding: 3em;
